[DOC] Added .gitignore for LaTeX
ignored compiled files

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@
 *.exe
 *.out
 *.app
+
+Documentation/Title\.synctex\.gz
+
+Documentation/Title\.pdf
+
+Documentation/Title\.log
+
+Documentation/Title\.aux
