--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,6 @@ Documentation/Title\.aux
 
 Project/sknx/cmake-build-debug/
 
-Project/sknx/\.idea/vcs\.xml
-
 Project/sknx/\.idea/
+
+Project/\.idea/
