[libsmoke] created CMakeLists

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Project/libsmoke/libs/sknx/cmake-build-debug/
 Project/libsmoke/libs/sknx/\.idea/
 
 \.idea/
+
+Project/libsmoke/cmake-build-debug/
