--- a/Project/libsmoke/CMakeLists.txt
+++ b/Project/libsmoke/CMakeLists.txt
@@ -149,3 +149,104 @@ add_executable(server
         src/libsmoke_server.cpp
         tests/server_test.cpp
         tests/connection_data.h)
+
+add_executable(client1
+        include/libsmoke/libsmoke_client.h
+        libs/sknx/config/arch/arm7_lpc2000/lpc2138_miosix_board/board_settings.h
+        libs/sknx/config/arch/cortexM3_efm32gg/efm32gg332f1024_wandstem/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f100cb_tempsensor/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f100rb_stm32vldiscovery/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f100rc_solertegiard/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f103cb_als_mainboard_rev2/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f103ve_mp3v2/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f103ve_strive_mini/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f103ze_redbull_v2/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32/stm32f103ze_stm3210e-eval/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32f2/stm32f205rc_skyward_stormtrooper/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32f2/stm32f205rg_sony-newman/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32f2/stm32f207ig_stm3220g-eval/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32f2/stm32f207ze_als_camboard/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32f2/stm32f207zg_EthBoardV2/board_settings.h
+        libs/sknx/config/arch/cortexM3_stm32l1/stm32l151c8_als_mainboard/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f401vc_stm32f4discovery/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f407vg_bitsboard/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f407vg_stm32f4discovery/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f411re_nucleo/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f429zi_oledboard2/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f429zi_skyward_anakin/board_settings.h
+        libs/sknx/config/arch/cortexM4_stm32f4/stm32f429zi_stm32f4discovery/board_settings.h
+        libs/sknx/config/miosix_settings.h
+        libs/sknx/libs/polarssl/include/polarssl/aes.h
+        libs/sknx/libs/polarssl/include/polarssl/aesni.h
+        libs/sknx/libs/polarssl/include/polarssl/bignum.h
+        libs/sknx/libs/polarssl/include/polarssl/bn_mul.h
+        libs/sknx/libs/polarssl/include/polarssl/check_config.h
+        libs/sknx/libs/polarssl/include/polarssl/config.h
+        libs/sknx/libs/polarssl/include/polarssl/ctr_drbg.h
+        libs/sknx/libs/polarssl/include/polarssl/ecp.h
+        libs/sknx/libs/polarssl/include/polarssl/entropy.h
+        libs/sknx/libs/polarssl/include/polarssl/entropy_poll.h
+        libs/sknx/libs/polarssl/include/polarssl/miosix_poll.h
+        libs/sknx/libs/polarssl/include/polarssl/net.h
+        libs/sknx/libs/polarssl/include/polarssl/padlock.h
+        libs/sknx/libs/polarssl/include/polarssl/platform.h
+        libs/sknx/libs/polarssl/include/polarssl/sha512.h
+        libs/sknx/libs/polarssl/include/polarssl/timing.h
+        libs/sknx/libs/polarssl/src/aes.c
+        libs/sknx/libs/polarssl/src/aesni.c
+        libs/sknx/libs/polarssl/src/bignum.c
+        libs/sknx/libs/polarssl/src/ctr_drbg.c
+        libs/sknx/libs/polarssl/src/ecp.c
+        libs/sknx/libs/polarssl/src/ecp_curves.c
+        libs/sknx/libs/polarssl/src/entropy.c
+        libs/sknx/libs/polarssl/src/entropy_poll.c
+        libs/sknx/libs/polarssl/src/miosix_poll.cc
+        libs/sknx/libs/polarssl/src/net.c
+        libs/sknx/libs/polarssl/src/platform.c
+        libs/sknx/libs/polarssl/src/sha512.c
+        libs/sknx/libs/polarssl/src/timing.c
+        libs/sknx/libs/sban/include/sban/bd1.h
+        libs/sknx/libs/sban/include/sban/bd2.h
+        libs/sknx/libs/sban/include/sban/common.h
+        libs/sknx/libs/sban/include/sban/gdh2.h
+        libs/sknx/libs/sban/include/sban/KnxTelegram.h
+        libs/sknx/libs/sban/include/sban/KnxTpUart.h
+        libs/sknx/libs/sban/include/sban/mka.h
+        libs/sknx/libs/sban/include/sban/util.h
+        libs/sknx/libs/sban/src/bd1.c
+        libs/sknx/libs/sban/src/bd2.c
+        libs/sknx/libs/sban/src/gdh2.c
+        libs/sknx/libs/sban/src/mka.c
+        libs/sknx/libs/sban/src/util.c
+        libs/sknx/src/shared/knx/backend/backend.h
+        libs/sknx/src/shared/knx/backend/linux-tcp.h
+        libs/sknx/src/shared/knx/backend/linux-tpuart.h
+        libs/sknx/src/shared/knx/backend/linux-uart.h
+        libs/sknx/src/shared/knx/backend/miosix-stm32-usart.h
+        libs/sknx/src/shared/knx/backend/miosix-tpuart.h
+        libs/sknx/src/shared/knx/crypto/bd1.h
+        libs/sknx/src/shared/knx/crypto/bd2.h
+        libs/sknx/src/shared/knx/crypto/bd2_utils.h
+        libs/sknx/src/shared/knx/crypto/crypto.h
+        libs/sknx/src/shared/knx/crypto/dummy.h
+        libs/sknx/src/shared/knx/crypto/gdh2.h
+        libs/sknx/src/shared/knx/crypto/gdh2_utils.h
+        libs/sknx/src/shared/knx/crypto/mka.h
+        libs/sknx/src/shared/knx/crypto/policies.h
+        libs/sknx/src/shared/knx/nodecounter/counter.h
+        libs/sknx/src/shared/knx/nodecounter/dummy.h
+        libs/sknx/src/shared/knx/common.h
+        libs/sknx/src/shared/knx/config.h
+        libs/sknx/src/shared/knx/debug.h
+        libs/sknx/src/shared/knx/knx.h
+        libs/sknx/src/shared/knx/multirings.h
+        libs/sknx/src/shared/knx/pktwrapper.h
+        libs/sknx/src/shared/knx/ringbuffer.h
+        libs/sknx/src/shared/knx/telegram.h
+        libs/sknx/src/shared/knx/timing.h
+        libs/tiny-AES-c-master/aes.c
+        libs/tiny-AES-c-master/aes.h
+        libs/tiny-AES-c-master/aes.hpp
+        src/libsmoke_client.cpp
+        tests/client_test.cpp
+        tests/connection_data.h)
