--- a/Project/libsmoke/libs/tiny-AES-c-master/CMakeLists.txt
+++ b/Project/libsmoke/libs/tiny-AES-c-master/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8.12)
 project(tinyaes C ASM)
 
 add_library(tiny-aes
-        aes.c
-        )
+        aes.c)
 
-target_include_directories(tiny-aes PRIVATE tiny-AES-c/)
+target_include_directories(tiny-aes PUBLIC
+        ${CMAKE_CURRENT_LIST_DIR})
